--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ variables:
   COMMIT_SHA: ${CI_COMMIT_SHA}
   TAG: ${CI_COMMIT_TAG}
   LINOAPP_CHART_NAME: linoapp
+  LINOAPP_DOOR_CHART_NAME: linoapp-door
   JOBS_CHART_NAME: jobs
 
 before_script:
@@ -77,16 +78,20 @@ release:stg:
     - tags
   tags:
     - kubernetes
-  image: linonetwork/gitlab-stage-release-stg:v0.1.20
+  image: linonetwork/gitlab-stage-release-stg:v0.1.23
   environment:
     name: staging/$CI_COMMIT_REF_NAME
     url: https://github.com/lino-network/kube-app/commits/master
   script:
     # read CHART_VERSION/DOCKER_TAG env variable from helm build
     - source variables
+    - pull.sh
     
     # update staging env, replace LINOAPP_CHART_NAME to JOBS_CHART_NAME if deploy cronjob
-    - release.sh $REPO_NAME $CHART_NAME $ECR_NAME $CHART_VERSION $DOCKER_TAG $REPOSITORY $LINOAPP_CHART_NAME
+#    - release.sh $REPO_NAME $CHART_NAME $ECR_NAME $CHART_VERSION $DOCKER_TAG $REPOSITORY $LINOAPP_CHART_NAME
+    - patch_value.sh $CHART_NAME $DOCKER_TAG $LINOAPP_DOOR_CHART_NAME
+    - ([[ ! -z "$CHART_VERSION" ]]) && patch_chart.sh $CHART_NAME $CHART_VERSION $LINOAPP_DOOR_CHART_NAME
+    - push.sh $CHART_NAME $ECR_NAME $DOCKER_TAG $REPOSITORY
   dependencies:
     - helm
 
