--- a/.helm/go-btfs/values.yaml
+++ b/.helm/go-btfs/values.yaml
@@ -63,6 +63,16 @@ ports:
   containerPort: 5101
   protocol: TCP
 
+ingress:
+  name: go-btfs-ingress-external
+  ingressClass: nginx-external
+  domains:
+    - name: playback-btfs.stg.dlive.tv
+  secretName: go-btfs-tls
+
+upstreamHash:
+  enabled: false
+
 replicaCount: 1
 maxSurge: 1
 maxUnavailable: 0
