put path to vars

--- a/.helm/go-btfs/values.yaml
+++ b/.helm/go-btfs/values.yaml
@@ -68,6 +68,8 @@ ingress:
   ingressClass: nginx-external
   domains:
     - name: playback-btfs.stg.dlive.tv
+      path: /*
+
   secretName: go-btfs-tls
 
 upstreamHash:
