--- a/.helm/go-btfs/templates/ingress.yaml
+++ b/.helm/go-btfs/templates/ingress.yaml
@@ -26,7 +26,7 @@ spec:
     - host: {{ $value.name }}
       http:
         paths:
-          - path: /*
+          - path: {{ $value.path }}
             backend:
               serviceName: {{ template "go-btfs.fullname" $dot }}
               servicePort: api
