--- a/.helm/go-btfs/templates/ingress.yaml
+++ b/.helm/go-btfs/templates/ingress.yaml
@@ -4,15 +4,15 @@ metadata:
   name: {{ .Values.ingress.name }}
   annotations:
     kubernetes.io/ingress.class: "alb"
-    alb.ingress.kubernetes.io/scheme: "internet-facing"
-    alb.ingress.kubernetes.io/target-type: "instance"
-    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:726332586568:certificate/54a8c1c9-7153-4f12-8464-78f30cff5601"
+    alb.ingress.kubernetes.io/scheme: {{ .Values.ingress.alb.scheme }}
+    alb.ingress.kubernetes.io/target-type: {{ .Values.ingress.alb.targetType }}
+    alb.ingress.kubernetes.io/certificate-arn: {{ .Values.ingress.alb.certificateArn }}
     alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
-    alb.ingress.kubernetes.io/load-balancer-attributes: "access_logs.s3.enabled=true,access_logs.s3.bucket=stg-app-s3-waf,access_logs.s3.prefix=waf,deletion_protection.enabled=true"
-    alb.ingress.kubernetes.io/web-acl-id: "2e32b4b6-c31a-4f2f-a610-b31f32b0e8a9"
-    alb.ingress.kubernetes.io/inbound-cidrs: "0.0.0.0/0"
-    alb.ingress.kubernetes.io/healthcheck-path: /
-    alb.ingress.kubernetes.io/healthcheck-port: api
+    alb.ingress.kubernetes.io/load-balancer-attributes: {{ .Values.ingress.alb.attributes }}
+    alb.ingress.kubernetes.io/web-acl-id: {{ .Values.ingress.alb.webAclId }}
+    alb.ingress.kubernetes.io/inbound-cidrs: {{ .Values.ingress.alb.inboundCidrs }}
+    alb.ingress.kubernetes.io/healthcheck-path: {{ .Values.ingress.alb.healthcheckPath }}
+    alb.ingress.kubernetes.io/healthcheck-port: {{ .Values.ingress.alb.healthcheckPort }}
 spec:
 {{/*  tls:*/}}
 {{/*    - hosts:*/}}
