--- a/.helm/go-btfs/templates/pod-autoscaler.yaml
+++ b/.helm/go-btfs/templates/pod-autoscaler.yaml
@@ -22,5 +22,5 @@ spec:
     type: Resource
   scaleTargetRef:
     apiVersion: extensions/v1beta1
-    kind: Deployment
+    kind: StatefulSet
     name: {{ include "go-btfs.fullname" . }}
