try fix auto-scale

--- a/.helm/go-btfs/templates/pod-autoscaler.yaml
+++ b/.helm/go-btfs/templates/pod-autoscaler.yaml
@@ -21,6 +21,6 @@ spec:
       targetAverageUtilization: {{ .Values.autoscaler.targetAverageMemoryUtilization }}
     type: Resource
   scaleTargetRef:
-    apiVersion: extensions/v1beta1
+    apiVersion: apps/v1
     kind: StatefulSet
     name: {{ include "go-btfs.fullname" . }}
