--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,8 @@ variables:
   CHART_NAME: go-btfs
   COMMIT_SHA: ${CI_COMMIT_SHA}
   TAG: ${CI_COMMIT_TAG}
-  LIVESTREAM_CHART_NAME: livestream
+  ENVIRONMENT: prd-stream-core-b-v0609
+  LIVESTREAM_CHART_NAME: stream
   LINOAPP_DOOR_CHART_NAME: linoapp-door
 
 before_script:
@@ -121,7 +122,7 @@ release:prd:
     - tags
   tags:
     - kubernetes
-  image: linonetwork/gitlab-stage-release-prd-stream:v0.0.1
+  image: linonetwork/gitlab-stage-release-prd-stream:v0.0.3
   environment:
     name: production
     url: https://github.com/lino-network/kube-stream-core/pulls
@@ -129,6 +130,6 @@ release:prd:
     # read CHART_VERSION/DOCKER_TAG env variable from helm build
     - source variables
     # promote production env, replace LIVESTREAM_CHART_NAME to JOBS_CHART_NAME if deploy cronjob
-    - release.sh $REPO_NAME $CHART_NAME $ECR_NAME $CHART_VERSION $DOCKER_TAG $REPOSITORY $LIVESTREAM_CHART_NAME
+    - release.sh $REPO_NAME $CHART_NAME $ECR_NAME $CHART_VERSION $DOCKER_TAG $REPOSITORY $ENVIRONMENT $LIVESTREAM_CHART_NAME
   dependencies:
     - helm
